-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.3.0.0-incubating
-
Component/s: Build
-
Labels:None
After upgrading the protobuf version to 3.4 , CI pipeline fails with below errors. From the error message it looks like it is a problem with namespace resolution while declaring stringstream and ostringstream
Error message - /Users/travis/build/apache/incubator-hawq/depends/libyarn/src/libyarnclient/LibYarnClient.cpp:248:9: error: unknown type name 'stringstream'; did you mean 'std::stringstream'? stringstream ss; ^~~~~~~~~~~~ std::stringstream /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iosfwd:153:38: note: 'std::stringstream' declared here typedef basic_stringstream<char> stringstream; /Users/travis/build/apache/incubator-hawq/depends/libyarn/src/libyarnclient/LibYarnClient.cpp:299:13: error: unknown type name 'ostringstream'; did you mean 'std::ostringstream'? ostringstream key; ^~~~~~~~~~~~~ std::ostringstream /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iosfwd:152:38: note: 'std::ostringstream' declared here typedef basic_ostringstream<char> ostringstream;
- links to