HAWQ-1524 - Fix travis ci build failure after protobuf upgrade to 3.4